--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # globalne ustawienia aplikacji
-spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net:3306/sql7376689?\
-  useSSL=false\
-  &serverTimezone=UTC\
-  &useJDBCCompliantTimezoneShift=false\
-  &useLegacyDatetimeCode=false\
-  &allowPublicKeyRetrieval=true
-spring.datasource.username=sql7376689
-spring.datasource.password=GHWAFsGNBf
+#spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net:3306/sql7376689?\
+#  useSSL=false\
+#  &serverTimezone=UTC\
+#  &useJDBCCompliantTimezoneShift=false\
+#  &useLegacyDatetimeCode=false\
+#  &allowPublicKeyRetrieval=true
+#spring.datasource.username=sql7376689
+#spring.datasource.password=GHWAFsGNBf
 # update - nie inicjalizuje bazy danych przy uruchomieniu serwera aplikacji
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -19,3 +19,12 @@ spring.datasource.initialization-mode=always
 #Username: sql7376689
 #Password: GHWAFsGNBf
 #Port number: 3306
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_start?\
+  useSSL=false\
+  &serverTimezone=UTC\
+  &useJDBCCompliantTimezoneShift=false\
+  &useLegacyDatetimeCode=false\
+  &allowPublicKeyRetrieval=true
+spring.datasource.username=spring_start_user
+spring.datasource.password=qwe123
