--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,12 @@ spring.datasource.initialization-mode=always
 #Username: sql7376689
 #Password: GHWAFsGNBf
 #Port number: 3306
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_start?\
+  useSSL=false\
+  &serverTimezone=UTC\
+  &useJDBCCompliantTimezoneShift=false\
+  &useLegacyDatetimeCode=false\
+  &allowPublicKeyRetrieval=true
+spring.datasource.username=spring_start_user
+spring.datasource.password=qwe123
